Fix unequal card sizes on mobile devices

--- a/css/modal.css
+++ b/css/modal.css
@@ -1,6 +1,4 @@
 body {
-  min-height: 100vh;
-  overflow  : hidden;
   background: linear-gradient(90deg, #222f3e 30%, #393E46 70%);
   color     : #ddd;
 }
@@ -107,6 +105,13 @@ h1 {
 @media (max-width: 991px) {
   .col {
     flex: 0 0 266px;
+  }
+
+  .card-body {
+    min-height     : 150px;
+    display        : flex;
+    flex-direction : column;
+    justify-content: space-around;
   }
 
   .card-img-top {
